--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-ipython
-flask
-flask_wtf
-requests
-spotipy
-pandas
-numpy
+ipython==7.2.0
+flask==1.0.2
+flask_wtf==0.14.2
+requests==2.21.0
+spotipy==2.4.4
+pandas==0.23.4
+numpy==1.16.0
 setuptools
-flake8
-pep8
-pytest
+flake8==3.6.0
+pep8==1.7.1
+pytest==4.1.1
